# scriberia

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  pyproject.toml
server/: admin.py  bot.py  models.py  serializers.py  views.py
server/management/commands/: startbot.py
server/migrations/: 0001_initial.py
server/static/: tonconnect-manifest.json
server/static/server/css/: styles.css
server/static/server/js/: main.js
server/templates/server/: base.html  copy.html  fix.html  friends.html  home.html  leaderboard.html  offers.html  test.html
subs_server/: asgi.py  settings.py  urls.py  wsgi.py
